Fix Safari Clipped Language Switcher

--- a/resources/css/filament/admin/theme.css
+++ b/resources/css/filament/admin/theme.css
@@ -35,3 +35,6 @@
     display: none;
 }
 
+.fi-topbar {
+    overflow-x: initial !important;
+}
